--- a/login_styles.css
+++ b/login_styles.css
@@ -12,8 +12,8 @@
 
 #login {
     color: black;
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
+	font-family: Lato, sans-serif;    
+	text-align: center;
     font-size: 40px;
     padding-bottom: 30px;
     margin-top: 0px;
